# n-body-barnes-hutt-bloom-tonemap-grain-screen-dirt-wgpu

./: Cargo.toml  Notes.md  README.md
config/: default.toml  test.toml
src/: app.rs  config.rs  galaxy.rs  main.rs  sim.rs  ui.rs  wgpu_state.rs
src/app/: camera.rs  galaxy.rs  post_processing.rs  render.rs  timestamps.rs
src/app/post_processing/: bloom.rs  present.rs
src/app/shaders/: downsample.wgsl  present.wgsl  render.wgsl  upsample.wgsl
