[package]
name = "n-body-barnes-hutt-bloom-tonemap-grain-screen-dirt-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.4"
serde = "1.0.197"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wgpu = "0.19.1"
winit = "0.29.10"
