[package]
name = "n-body-barnes-hutt-bloom-tonemap-grain-screen-dirt-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
env_logger = "0.11.2"
log = "0.4.21"
pollster = "0.3.0"
nalgebra = "0.32.4"
wgpu = "0.19.1"
winit = "0.29.10"
serde = {version = "*", features = ["derive"]}
toml = "0.8.10"
bytemuck = {version = "*", features = ["derive"]}
rand_distr = "0.4.3"
rand = "0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.19.2", features = ["webgpu"] }
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
web-sys = {version = "0.3.68", features = ["Document", "Window", "Element"]}
console_log = "1.0.0" 
console_error_panic_hook = "0.1.7"
